application-mail.yml

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 auth-app-env.me
-*/application-mail.yml
+application-mail.yml
 
 ### STS ###
 .apt_generated
