--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 auth-app-env.me
-application-mail.yml
-application-mail.*
+application-mail-me.yml
+*.log
+
 ### STS ###
 .apt_generated
 .classpath
