add ssl self singed

--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -4,7 +4,7 @@ services:
   auth-service:
     image: ${GROUP_ID}/spring-security-authorization-service:${SERVICE_VERSION:-latest}
     ports:
-      - "9000:9000"
+      - 9000:${SERVER_PORT}
     depends_on:
       postgres:
         condition: service_healthy
@@ -25,7 +25,16 @@ services:
       SPRING_MAIL_PORT: ${SPRING_MAIL_HOST_PORT}
       SPRING_MAIL_USERNAME: ${SPRING_MAIL_USERNAME}
       SPRING_MAIL_PASSWORD: ${SPRING_MAIL_PASSWORD}
+      # ssl config
+      SERVER_SSL_KEY-STORE: ${SERVER_SSL_KEY_STORE}
+      SERVER_SSL_KEY-STORE-PASSWORD: ${SERVER_SSL_KEY_STORE_PASSWORD}
+      SERVER_SSL_KEY-STORE-TYPE: ${SERVER_SSL_KEY_STORE_TYPE}
+      SERVER_SSL_KEY-ALIAS: ${SERVER_SSL_KEY_STORE_ALIAS}
+      SERVER_SSL_KEY-PASSWORD: ${SERVER_SSL_KEY_STORE_PASSWORD}
+      SERVER_SSL_ENABLED: ${SERVER_SSL_ENABLED}
+      SERVER_PORT: ${SERVER_PORT}
       # app config
+      SPRING_PROFILES_ACTIVE: ${APPLICATION_PROFILES}
       APPLICATION_INFO_NAME: ${APPLICATION_INFO_NAME}
       APPLICATION_INFO_HOST: ${APPLICATION_INFO_HOST}
       APPLICATION_INFO_CONTACT-EMAIL: ${APPLICATION_INFO_CONTACT-EMAIL}
