--- a/docker-compose/services.yml
+++ b/docker-compose/services.yml
@@ -44,6 +44,7 @@ services:
       # application security paths
       APPLICATION_SECURITY_LOGIN_VALIDATOR_VALIDATE-URL: ${APPLICATION_SECURITY_LOGIN_VALIDATOR_VALIDATE_URL}
       # localhost google recaptcha keys
+      GOOGLE_RECAPTCHA_ENABLE: ${GOOGLE_RECAPTCHA_ENABLE}
       GOOGLE_RECAPTCHA_KEY_SITE: ${GOOGLE_RECAPTCHA_KEY_SITE}
       GOOGLE_RECAPTCHA_KEY_SECRET: ${GOOGLE_RECAPTCHA_KEY_SECRET}
     networks:
