add redis attempt service

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--        end:datasource    -->
         <!--        start:security    -->
         <dependency>
